--- a/vUS3/vUS3.tex
+++ b/vUS3/vUS3.tex
@@ -1,11 +1,11 @@
 \input{header.tex}
 
-\subject{VERSUCH NUMMER}
-\title{TITEL}
+\subject{US3}
+\title{Doppler-Sonographie}
 \date{%
-  Durchführung: DATUM
+  Durchführung: 12.04.2022
   \hspace{3em}
-  Abgabe: DATUM
+  Abgabe: 19.04.2022
 }
 
 \begin{document}
