plOTSSSSSS FEDDIG :hjiufd:

--- a/vUS3/content/theorie.tex
+++ b/vUS3/content/theorie.tex
@@ -102,5 +102,5 @@ berechnet werden kann. Der Winkel $\alpha$ kann aus dem Brehungsgesetz hergeleit
 kann der Winkel $\alpha$ im Bogenmaß berechnet werden. 
 \begin{equation}
     \label{eqn:alpha}
-    \alpha = \frac{\pi}{2} - \symup{arcsin}\left(\symup{sin}\,\frac{c_\text{L}}{c_\text{P}}\right)
+    \alpha = \frac{\pi}{2} - \symup{arcsin}\left(\symup{sin}\left(\theta\right)\,\frac{c_\text{L}}{c_\text{P}}\right)
 \end{equation}
