--- a/vUS3/content/auswertung.tex
+++ b/vUS3/content/auswertung.tex
@@ -3,10 +3,35 @@
 
 \begin{figure}
   \centering
-  \includegraphics{plot.pdf}
+  \includegraphics{plot1_1.pdf}
   \caption{Plot.}
   \label{fig:plot}
 \end{figure}
 
+\begin{figure}
+  \centering
+  \includegraphics{plot1_2.pdf}
+  \caption{Plot.}
+  \label{fig:plot}
+\end{figure}
 
-Siehe \autoref{fig:plot}!
+\begin{figure}
+  \centering
+  \includegraphics{plot1_3.pdf}
+  \caption{Plot.}
+  \label{fig:plot}
+\end{figure}
+
+\begin{figure}
+  \centering
+  \includegraphics{plot2_1.pdf}
+  \caption{Plot.}
+  \label{fig:plot}
+\end{figure}
+
+\begin{figure}
+  \centering
+  \includegraphics{plot2_2.pdf}
+  \caption{Plot.}
+  \label{fig:plot}
+\end{figure}
