AUSWERTUNG FEDDIG WALLA BILAAHL :clap: :heart_eyes: :dog: :boom:DD

--- a/vUS3/content/theorie.tex
+++ b/vUS3/content/theorie.tex
@@ -96,6 +96,7 @@ und wird dann mit einem Winkel $\beta$ reflektiert. Dabei ändert sich aufgrund 
 berechnet werden. $\alpha$ und $\beta$ beschreiben den Winkel zwischen der Wellengeschwindigkeit und der Wellennormalen. Verwendet man das Ultraschalloskop 
 im Impuls-Echo-Verfahren gilt $\alpha = \beta$, sodass sich die Frequenzänderung durch 
 \begin{equation}
+    \label{eqn:frequenzverschiebung}
     \Delta\nu = 2\nu_0\frac{v}{c}\symup{cos}\,\alpha
 \end{equation}
 berechnet werden kann. Der Winkel $\alpha$ kann aus dem Brehungsgesetz hergeleitet werden. Mit den Schallgeschwindigkeiten der beiden Grenzmedien $c_\text{L}$ und $c_\text{P}$
