--- a/vUS3/content/auswertung.tex
+++ b/vUS3/content/auswertung.tex
@@ -1,37 +1,56 @@
 \section{Auswertung}
 \label{sec:Auswertung}
-
+Für die Auswertung der Messungen wird im folgenden die Dopplerphantomflüssigkeit mit einer Dichte $\rho = 1.15 \unit{\gram\per\cubic\centi\metre}$, einer 
+Schallgeschwindigkeit $c_\text{L} = 1800 \unit{\metre\per\second}$ und einer Viskosität $\eta = 12 \unit{\milli\pascal\second}$ angenommen. Außerdem hat das Dopplerprisma
+eine Schallgeschwindigkeit $c_\text{P} = 2700 \unit{\metre\per\second}$ und eine Länge der Vorlaufsstrecke von $l = 30.7 \unit{\milli\metre}$. Die Senderfrequenz beträgt 
+$\nu_0 = 2\unit{\mega\hertz}$. Die Rohre, durch welche die Dopplerphantomflüssigkeit fließt, haben Innendurchmesser von $7 \unit{\milli\metre}$, $10 \unit{\milli\metre}$
+und $16 \unit{\milli\metre}$. Die Außendurchmesser betragen $10 \unit{\milli\metre}$, $15 \unit{\milli\metre}$ und $20 \unit{\milli\metre}$.
+\subsection{Bestimmung der Strömungsgeschwindigkeit}
+Die Strömungsgeschwindigkeit der Dopplerphantomflüssigkeit kann aus der Formel \eqref{eqn:frequenzverschiebung} berechnet werden. Dazu wird diese Formel auf $v$ umgestellt.
+\begin{equation*}
+  v_\text{Strömung} = \frac{\symup{\Delta}\nu\cdot c}{\nu_0\,\symup{cos}\,\alpha} 
+\end{equation*}
+Die frequenzverschiebung $\symup{\Delta}\nu$ wurde aus den gemessenen Werten $f_\text{max}$ und $f_\text{mean}$ gemäß $\symup{\Delta}\nu = f_\text{max} - f_\text{mean}$ berechnet.
+Diese können dem Anhang entnommen werden.
+In den folgenden Abbildungen \ref{fig:plot1_1}, \ref{fig:plot1_2} und \ref{fig:plot1_3} werden die Frequenzverschiebung dividiert durch den $\symup{cos}\,\alpha$ in 
+Abhängigkeit von der berechneten Strömungsgeschwindigkeit dargestellt. Dies wird für die drei oberhalb erwähnten Rohrdurchmesser gemacht.
 \begin{figure}
   \centering
   \includegraphics{plot1_1.pdf}
-  \caption{Plot.}
-  \label{fig:plot}
+  \caption{In dieser Abbildung wird die eben erwähnte Grafik für einen Innenrohrdurchmesser  von $d = 7 \unit{\milli\metre}$ dargestellt.}
+  \label{fig:plot1_1}
 \end{figure}
 
 \begin{figure}
   \centering
   \includegraphics{plot1_2.pdf}
-  \caption{Plot.}
-  \label{fig:plot}
+  \caption{In dieser Abbildung wird die eben erwähnte Grafik für einen Innenrohrdurchmesser  von $d = 10 \unit{\milli\metre}$ dargestellt.}
+  \label{fig:plot1_2}
 \end{figure}
 
 \begin{figure}
   \centering
   \includegraphics{plot1_3.pdf}
-  \caption{Plot.}
-  \label{fig:plot}
+  \caption{In dieser Abbildung wird die eben erwähnte Grafik für einen Innenrohrdurchmesser  von $d = 16 \unit{\milli\metre}$ dargestellt.}
+  \label{fig:plot1_3}
+\end{figure}
+\subsection{Bestimmung des Strömungsprofils}
+\label{subsec:strömungsprofil}
+Das Strömungsprofil mit einer gleichen Messung aufgenommen werden. Die orginalen Messwerte können dem Anhang einnommen werden. Allerdings ist nun der  Winkel am Prisma
+$\theta = 15\unit{\degree}$ konstant und die Messtiefe wird variiert.
+In den Abbildungen \ref{fig:plot2_1} und \ref{fig:plot2_2} wird für zwei unterschiedliche Pumpleistungen die Streuintensität $I$ und die Momentangeschwindigkeit $v$ gegen die 
+Messtiefe dargestellt. Außerdem wurde mit den Messwerten ein quadratischer Fit erstellt. 
+
+\begin{figure}
+  \centering
+  \includegraphics[width=.8\textwidth]{plot2_1.pdf}
+  \caption{In dieser Abbildung werden die Intensität und die Momentangeschwindigkeit in Abhängigkeit von der Messtiefe zu einer Pumpleistung von 45\% der maximalen Pumpleistung dargestellt.}
+  \label{fig:plot2_1}
 \end{figure}
 
 \begin{figure}
   \centering
-  \includegraphics{plot2_1.pdf}
-  \caption{Plot.}
-  \label{fig:plot}
-\end{figure}
-
-\begin{figure}
-  \centering
-  \includegraphics{plot2_2.pdf}
-  \caption{Plot.}
-  \label{fig:plot}
+  \includegraphics[width=.8\textwidth]{plot2_2.pdf}
+  \caption{In dieser Abbildung werden die Intensität und die Momentangeschwindigkeit in Abhängigkeit von der Messtiefe zu einer Pumpleistung von 70\% der maximalen Pumpleistung dargestellt.}
+  \label{fig:plot2_2}
 \end{figure}
