--- a/vUS3/content/diskussion.tex
+++ b/vUS3/content/diskussion.tex
@@ -1,2 +1,18 @@
 \section{Diskussion}
 \label{sec:Diskussion}
+Im ersten Teil des Versuches wird der Zusammenhang zwischen Dopplerwinkel $\alpha$ und Strömungsgeschwindigkeit $v_\text{Fluss}$ untersucht. 
+Anhand der \autoref{eqn:frequenzverschiebung} lässt sich erkennen, dass der Quotient $\symup{\Delta}\nu \mathbin{/} \symup{cos}\, \alpha$
+nicht mehr von $\alpha$ abhängig ist und sich proportional zu $v_\text{Fluss}$ verhält. Demnach sollten die in den Abbildungen \ref{fig:plot1_1}
+bis \ref{fig:plot1_3} dargestellten Messwerte eine Gerade ergeben, auf welcher die Messpunkte zu verschiedenen Winkeln $\theta$ gruppiert sind.
+Es fällt jedoch auf, dass besonders bei höheren Fließgeschwindigkeiten eine große Streuung der Messwerte auftritt, obwohl diese die gleichen
+Punkte abbilden sollten.
+Dies deutet auf die Ungenauigkeit des Verfahrens hin. Eine Ursache dafür ist, dass die Messwertanzeige der mittleren Frequenz $f_\text{mean}$ und
+jener der maximalen Frequenz $f_\text{max}$ starken Schwankungen unterliegt, wodurch die daraus bestimmte Frequenzverschiebung eine große Ungenauigkeit
+vorweist. Weitere Fehlerquellen sind die manuelle Führung der Messsonde und die Drehzahlschwankungen der Pumpe. 
+
+Bei der Bestimmung des Strömungsprofils ergeben sich die Grafiken \ref{fig:plot2_1} und \ref{fig:plot2_2}. Es lässt sich erkennen, dass der Verlauf der
+Messpunkte der Momentangeschwindigkeit parabelähnlich ist, weshalb die Vermutung nahe liegt, dass ein quadratischer Zusammenhang zwischen Messtiefe und
+Geschwindigkeit der Flüssigkeit besteht. Auch die Messwerte der Intensität stellen einen ähnlichen Verlauf dar, jedoch könnte hier eine Hutfunktion
+eine bessere Approximation liefern. Bei höherer Pumpleistung (Strömungsgeschwindigkeit) können mehr Messwerte genommen werden, da bei geringeren 
+Geschwindigkeiten die Streuintensität des Signals an den Rändern der Wasserleitung nicht mehr ausreicht. Wie auch im ersten Teil ist die starke 
+Fluktuation der in \textit{Flow View} angezeigten Messwerte eine potenzielle Fehlerquelle. 
