--- a/vUS3/content/durchfuehrung.tex
+++ b/vUS3/content/durchfuehrung.tex
@@ -47,5 +47,5 @@ um die Messtiefe regulieren zu können. Diese ist in $\unit{\micro\second}$ ange
 entsprechen $\qty{4}{\micro\second}$ $\qty{10}{\milli\metre}$, in der Dopplerflüssigkeit entspricht dies $\qty{6}{\milli\metre}$. Die Messung beginnt in einer Tiefe
 von $\qty{12}{\micro\second}$ und endet mit einer Schrittweite von $\qty{0.5}{\micro\second}$ bei $\qty{19.5}{\micro\second}$. Zu jedem Messpunkt werden die 
 Intensität $I$, die Frequenzverschiebung $\symup{\Delta}\nu$ und die momentane Geschwindigkeit $v$ notiert. 
-Dieses Messprogramm wird bei einer Pumpleistung von $\qty{45}{\percent}$ und $\qty{70}{\percent}$ durchgeführt.
+Dieses Messprogramm wird bei einer Pumpleistung von $\qty{45}{\percent}$ und $\qty{70}{\percent}$ der Maximalleistung durchgeführt.
 Aus den Messwerten lässt sich die Struktur des Strömungsprofils ermitteln, indem Intensität und Geschwindigkeit gegen die Messtiefe aufgetragen werden.
