--- a/vUS3/content/theorie.tex
+++ b/vUS3/content/theorie.tex
@@ -81,27 +81,28 @@ sich der Sender jedoch weg von dem Empfänger sinkt die vom Empfänger aufgenomm
     \nu_{\text{kl/gr}} = \frac{\nu_0}{1 \mp \frac{v}{c}} 
 \end{equation*}
 Im zweiten Fall bewegt sich der Empfänger und der Sender soll sich in Ruhe befinden. Bewegt sich der Empfänger auf den Sender zu steigt die Frequenz $\nu_{\text{h}}$.
-Wenn er sich entfehrnt, dann sinkt die aufgenommene Frequenz $\nu_{\text{n}}$. 
+Wenn er sich entfernt, dann sinkt die aufgenommene Frequenz $\nu_{\text{n}}$. 
 \begin{equation*}
     \nu_{\text{h/n}} = \nu_0 \left(1 \pm \frac{v}{c}\right)
 \end{equation*}
 Im dritten Fall ändert sich die Frequenz in Abhängigkeit beider Bewegungen.
 \subsection{Bestimmung der Strömungsgeschwindigkeit}
 \label{subsec:strömung}
-Wird der Doppler-Effekt auf eine Flüssigkeit angewendet, welche mit Ultraschall untersucht wird, so trifft die Welle mit einem Winkel $\alpha$ auf die Flüssigkeit
-und wird dann mit einem Winkel $\beta$ reflektiert. Dabei ändert sich aufgrund des Doppler-Effekts die Frequenz. Die Frequenzänderung kann mittels
+Wird der Doppler-Effekt auf eine Flüssigkeit angewendet, welche mit Ultraschall untersucht wird, so trifft die Schallwelle unter einem Winkel $\alpha$ auf die Flüssigkeit
+und wird in einem Winkel $\beta$ reflektiert. Aufgrund des Doppler-Effekts ändert sich dabei die Frequenz. Die Frequenzänderung kann mittels
 \begin{equation*}
-    \Delta\nu = \nu_0\frac{v}{c}\left(\symup{cos}\,\alpha + \symup{cos}\,\beta\right)
+    \symup{\Delta}\nu = \nu_0\frac{v}{c}\left(\symup{cos}\,\alpha + \symup{cos}\,\beta\right)
 \end{equation*}
 berechnet werden. $\alpha$ und $\beta$ beschreiben den Winkel zwischen der Wellengeschwindigkeit und der Wellennormalen. Verwendet man das Ultraschalloskop 
-im Impuls-Echo-Verfahren gilt $\alpha = \beta$, sodass sich die Frequenzänderung durch 
+im Impuls-Echo-Verfahren gilt $\alpha = \beta$, sodass die Frequenzänderung durch 
 \begin{equation}
     \label{eqn:frequenzverschiebung}
-    \Delta\nu = 2\nu_0\frac{v}{c}\symup{cos}\,\alpha
+    \symup{\Delta}\nu = 2\nu_0\frac{v}{c}\symup{cos}\,\alpha
 \end{equation}
-berechnet werden kann. Der Winkel $\alpha$ kann aus dem Brehungsgesetz hergeleitet werden. Mit den Schallgeschwindigkeiten der beiden Grenzmedien $c_\text{L}$ und $c_\text{P}$
-kann der Winkel $\alpha$ im Bogenmaß berechnet werden. 
+berechnet werden kann. Die größe des Winkel $\alpha$ folgt aus dem Brechungsgesetz. Mit den Schallgeschwindigkeiten der beiden Grenzmedien $c_\text{L}$ und $c_\text{P}$
+ergibt sich  
 \begin{equation}
     \label{eqn:alpha}
     \alpha = \frac{\pi}{2} - \symup{arcsin}\left(\symup{sin}\left(\theta\right)\,\frac{c_\text{L}}{c_\text{P}}\right)
 \end{equation}
+für einem Einstrahlwinkel $\theta$.
