kleine verbesserungen und sooß :nerd::scream::skull::headstone::no_smoking::moyai:

--- a/vUS3/content/durchfuehrung.tex
+++ b/vUS3/content/durchfuehrung.tex
@@ -23,7 +23,7 @@ Untersucht wird ein Rohrkreislauf, in welchem drei Rohre mit unterschiedlichen D
 Rohrduchmesser angepasst und verfügen über je drei Flächen mit verschiedenem Dopplerwinkel, wobei alle Flächen den gleichen Abstand zur Probe (Flüssigkeit) garantieren.  
 Der Aufbau der Prismen ist \autoref{fig:Prisma} zu entnehmen. Es wird eine aus Wasser, Glycerin und
 Glasperlen bestehende Dopplerphantomflüssigkeit verwendet, dessen Viskosität $\eta$ und akustischen Eigenschaften auf den Versuchsaufbau abgestimmt sind.
-Der Wasserkreislauf wird durch eine Zentrifugalpumpe angetrieben, die die Durchflussmengen von $0$ bis $\qty{10}{\liter}$ liefert.
+Der Wasserkreislauf wird durch eine Zentrifugalpumpe angetrieben, welche die Durchflussmengen von $0$ bis $\qty{10}{\liter}$ liefert.
 Die Signale des Echoskops werden an einen Rechner übertragen, an welchem sie mithilfe des Programms \textit{FlowView} ausgewertet werden können.
 
 \begin{figure}
