--- a/vUS3/content/theorie.tex
+++ b/vUS3/content/theorie.tex
@@ -1,6 +1,6 @@
 \section{Ziel}
 \label{sec:Ziel}
-Im folgendem Experiment wird mittels Doppler-Sonographie die Strömung einer Testflüssigkeit untersucht werden. Die Doppler-Sonographie ist eine Ultraschallmethode, welche es ermöglicht
+Im folgendem Experiment wird mittels Doppler-Sonographie die Strömung einer Testflüssigkeit untersucht. Die Doppler-Sonographie ist eine Ultraschallmethode, welche es ermöglicht
 Strömungsgeschwindigkeiten einer Flüssigkeit zu ermitteln, obgleich diese von einem anderem Medium umschlossen ist.   
 \section{Theorie}
 \label{sec:Theorie}
@@ -29,7 +29,7 @@ Laufzeit $t$ eines Impulssignals und dem Weg-Zeit-Gesetz
     s = v \cdot t
 \end{equation} 
 Abstände bestimmt werden.
-In Flüssigkeiten kann die Schallgeschwindigkeit mit der Kompressibilität $\kappa$ über $c_\text{Fl} = \sqrt{\sfrac{1}{\kappa \rho}}$ bestimmt werden, in Feststoffen
+In Flüssigkeiten kann die Schallgeschwindigkeit mit der Kompressibilität $\kappa$ über $c_\text{Fl} = \sqrt{\sfrac{1}{\kappa \rho}}$ bestimmt werden. In Feststoffen
 lautet die Gleichung $c_\text{Fe} = \sqrt{\sfrac{E}{\rho}}$, mit dem Elastizitätsmodul $E$. Über die Schallgeschwindigkeit $c$ und die Frequenz $f$ der Schallwelle 
 kann die Wellenlänge
 \begin{equation}
@@ -56,7 +56,7 @@ bestimmt werden. $T = 1 - R$ ist der transmittierte Anteil.
 Grundlegend können zwei verschiedene Verfahren angewendet werden. 
 
 Bei dem \textit{Durchschallungsverfahren} wird ein Schallimpuls an einer Seite des zu analysierenden Stückes ausgesendet und an der Anderen von einem Empfänger 
-aufgenommen. Das Vorhandensein von Störstellen im Material lässt sich über abweichende Intensitäten des Empfangsimpulses feststellen, über die Größe dieser Störstelle
+aufgenommen. Das Vorhandensein von Störstellen im Material lässt sich über abweichende Intensitäten des Empfangsimpulses feststellen. Über die Größe dieser Störstelle
 kann keine Aussage getroffen werden.
 
 Bei dem \textit{Impuls-Echo-Verfahren} wird die Reflektion der Schallwelle an Grenzflächen ausgenutzt, indem der Sender gleichzeitig als Empfänger dient und den 
@@ -93,8 +93,8 @@ und wird in einem Winkel $\beta$ reflektiert. Aufgrund des Doppler-Effekts ände
 \begin{equation*}
     \symup{\Delta}\nu = \nu_0\frac{v}{c}\left(\symup{cos}\,\alpha + \symup{cos}\,\beta\right)
 \end{equation*}
-berechnet werden. $\alpha$ und $\beta$ beschreiben den Winkel zwischen der Wellengeschwindigkeit und der Wellennormalen. Verwendet man das Ultraschalloskop 
-im Impuls-Echo-Verfahren gilt $\alpha = \beta$, sodass die Frequenzänderung durch 
+berechnet werden. $\alpha$ und $\beta$ beschreiben den Winkel zwischen der Wellengeschwindigkeit und der Wellennormalen. Wird das Ultraschalloskop 
+im Impuls-Echo-Verfahren verwendet gilt $\alpha = \beta$, sodass die Frequenzänderung durch 
 \begin{equation}
     \label{eqn:frequenzverschiebung}
     \symup{\Delta}\nu = 2\nu_0\frac{v}{c}\symup{cos}\,\alpha
@@ -105,4 +105,4 @@ ergibt sich
     \label{eqn:alpha}
     \alpha = \frac{\pi}{2} - \symup{arcsin}\left(\symup{sin}\left(\theta\right)\,\frac{c_\text{L}}{c_\text{P}}\right)
 \end{equation}
-für einem Einstrahlwinkel $\theta$.
+für einen Einstrahlwinkel $\theta$.
