--- a/vUS3/content/theorie.tex
+++ b/vUS3/content/theorie.tex
@@ -1,6 +1,6 @@
 \section{Ziel}
 \label{sec:Ziel}
-Im folgendem Experiment wird mittels Doppler-Sonographie die Strömung einer Testflüssigkeit untersucht. Die Doppler-Sonographie ist eine Ultraschallmethode, welche es ermöglicht
+Im folgenden Experiment wird mittels Doppler-Sonographie die Strömung einer Testflüssigkeit untersucht. Die Doppler-Sonographie ist eine Ultraschallmethode, welche es ermöglicht
 Strömungsgeschwindigkeiten einer Flüssigkeit zu ermitteln, obgleich diese von einem anderem Medium umschlossen ist.   
 \section{Theorie}
 \label{sec:Theorie}
