auswertung feddig cite hinzugefügt und bilda dabeiiihhh :shit: :cock:

--- a/lit.bib
+++ b/lit.bib
@@ -89,6 +89,13 @@
 	url          = {https://moodle.tu-dortmund.de/pluginfile.php/1977256/mod_resource/content/2/US2.pdf},
 }
 
+@online{v602,
+	title        = {V602 - Röntgenemission und -absorption},
+	organization = {TU Dortmund},
+	urldate      = {2022-04-20},
+	url          = {https://moodle.tu-dortmund.de/pluginfile.php/1977250/mod_resource/content/4/V602.pdf},
+}
+
 @book{Demtröder_Exp_P_1,
 	author       = {Professor Dr. Wolfgang Demtröder},
 	title        = {Experimentalphysik 1 Mechanik und Wärme},
