--- a/v602/content/theorie.tex
+++ b/v602/content/theorie.tex
@@ -1,4 +1,21 @@
+\section{Zielsetzung}
+\label{sec:Ziel}
+In diesem Versuch wird das Emissionsspektrum einer Kupfer-Anode untersucht und seine Charakteristika analysiert. Des Weiteren wird das Auflösungsvermögen
+des Messgeräts und die Absorptionsspektren verschiedener Stoffe betrachtet. 
+
 \section{Theorie}
 \label{sec:Theorie}
-
-\cite{sample}
+Röntgenstrahlen können mithilfe einer Elektronenkanone erzeugt werden. Dabei treffen beschleunigte Elektronen auf das Anodenmaterial und geben (kinetische)
+Energie an dieses ab. Es wird zwischen zwei Arten der Energieabgabe unterschieden. Ein Elektron kann im Coulombfeld eines Atomkerns abgebremst werden,
+wodurch es Energie verliert. Diese Energie wird in Form eines Photons (Röntgenquants) emittiert. Da auf diese Weise ein beliebiger Teil der Energie des
+Elektrons abgegeben werden kann, ensteht ein kontinuierliches Spektrum, welches \textit{Bremsspektrum} genannt wird.
+Bei vollständiger Abgabe der kinetischen Energie $E_\text{kin} = U_\text{B} \cdot e$ des Elektrons wird eine minimale Wellenlänge
+\begin{equation}
+    \label{eqn:lambda_min}
+    \lambda_\text{min} = \frac{h c}{e U_\text{B}}
+\end{equation}
+erreicht. Dabei ist $U_\text{B}$ die Beschleunigungsspannung der Apparatur und $e$ die Elementarladung. 
+Bei der zweiten Form der Energieabgabe wird ein Atom den Anodenmaterials ionisiert, sodass eine Leerstelle in einer inneren Schale des Atoms entsteht. 
+Beim Zurückfallen eines Elektrons einer äußeren Schale wird dann wieder ein Phtoton emittiert. Das Elektron kann jedoch nur diskrete Energien abgeben,
+welche der Differenz zwischen den Energieniveaus der ELektronen der verschiedenen Schalen entspricht, wodurch die \textit{charakteristische Röngenstrahlung}
+entsteht.
