auswetungsplot geht nohc net wegen nem fehler im makefile aber fixen wa lieber gemeinsam und plot is bis auf fehler eig feddig denke ich

--- a/v602/content/auswertung.tex
+++ b/v602/content/auswertung.tex
@@ -1,2 +1,22 @@
 \section{Auswertung}
 \label{sec:Auswertung}
+Im folgendem werden alle Fehler gemäß der gaußschen Fehlerfortpflanzung mittels \textit{Scipy}\cite{scipy} berechnet.
+\subsection{Überprüfung der Braggbedingung}
+\label{subsec:bragg}
+Um die Braggbedingung zu überprüfen wurden aus einer Kupferanode entstandene Röntgenstrahlen mittels der Drehwinkelmethode reflektiert und dann detektiert. Wie in 
+\autoref{fig:bragg} zu sehen ist, liegt der experimentell bestimmte Glanzwinkel bei $\theta_\text{Glanz, exp} = \qty{27.3}{\degree}$. Die Braggbedingung sagt einen 
+Glanzwinkel von $\theta_\text{Glanz, theo} = \qty{28}{\degree}$ voraus. Daher ergibt sich eine relative Abweichung von $\Delta \theta_\text{Glanz} = 2.5\%$.
+\begin{figure}
+    \centering
+    \includegraphics{plotbragg.pdf}
+    \caption{Messwerte zur Überpüfung der Braggbedingung.}
+    \label{fig:bragg}
+\end{figure}
+
+\subsection{Emissionsspektrum einer Cu-Röntgenröhre}
+\label{subsec:emission}
+
+
+
+\subsection{Absorptionsspektrum}
+\label{subsec:absorption}
